# Contrast2

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Procfile  README.md  docker-compose.yml  historic_data.json  knowledgebase.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
ai_plans/: fix_paradigm_breakdown_labels.md
approval_process/: admin.py  apps.py  choices.py  models.py
approval_process/migrations/: 0001_initial.py  0002_alter_approvalprocess_status.py  0003_alter_approvalprocess_status.py  0004_alter_approvalcomment_options.py
approval_process/templates/: received_submission.html  study_submitted.html  submission_approved.html  submission_rejected.html
approval_process/tests/: test_study_approval_sequence.py
configuration/: admin.py  initial_setup.py  models.py  serializers.py  uncontrast_initial_data_types.py  urls.py  views.py
configuration/migrations/: 0001_initial.py  0002_rename_graphimages_graphimage.py  0003_auto_20230526_2203.py  0004_alter_graphimage_key.py
configuration/tests/: test_configuration_views.py
contrast_api/: admin_utils.py  asgi.py  choices.py  filters.py  locator.py  middleware.py  open_api_parameters.py  orm_helpers.py  serializers.py  settings.py  urls.py  utils.py  wsgi.py
contrast_api/application_services/: brain_images.py  feedback.py  notifer.py  notifier.py  study_lifecycle.py
contrast_api/data_migration_functionality/: create_study.py  errors.py  helpers.py  studies_parsing_helpers.py
contrast_api/domain_services/: study_lifecycle.py
contrast_api/models/: __init__.py  author.py
contrast_api/studies/: permissions.py
contrast_api/technical_services/: email.py
contrast_api/tests/: base.py
deploy/: Dockerfile
frontapp/: index.html
frontapp/assets/: UploadNewPaperPage-54af0acb.js  WorldMap-475aa70c.js  index-50810489.js  index-744c82b7.css  index-7fbe46d7.css  index-9f3bbc28.css  index-e1b63c89.css  index-e72077b5.css
studies/: admin.py  apps.py  choices.py  filters.py  graph_data_processors.py  managers.py  open_api_parameters.py  permissions.py  serializers.py  studies_parsing_helpers.py  urls.py  views.py
studies/implementation_tests/: test_study_parsers_helpers.py
studies/migrations/: 0001_initial.py  0002_alter_experiment_finding_description.py  0002_alter_sample_type.py  0003_alter_experiment_is_reporting_and_more.py  0003_alter_experiment_theory_driven.py  0004_experiment_type.py  0005_auto_20230109_1354.py  0006_remove_study_abstract_remove_study_publisher_and_more.py  0006_rename_key_words_study_authors_key_words_and_more.py  0006_stimuluscategory_findingtagtype_family_and_more.py  0007_alter_stimulussubcategory_parent.py  0007_rename_key_words_study_authors_key_words_and_more.py  0008_auto_20230114_1754.py  0009_alter_findingtagfamily_name_and_more.py  0010_merge_20230115_1027.py  0011_auto_20230115_1425.py  0012_remove_study_abstract_remove_study_publisher_and_more.py  0013_rename_key_words_study_authors_key_words_and_more.py  0014_auto_20230206_2307.py  0014_study_submitter.py  0015_alter_experiment_interpretations.py  0016_alter_experiment_theory_driven_theories.py  0017_alter_findingtagfamily_options_and_more.py  0018_alter_experiment_interpretations_and_more.py  0019_alter_experiment_options.py  0020_alter_theory_parent.py  0020_auto_20230208_2326.py  0021_experiment_notes_alter_sample_type.py  0022_alter_stimulus_duration.py  0023_alter_findingtag_band_higher_bound_and_more.py  0024_alter_findingtag_aal_atlas_tag.py  0025_alter_findingtag_offset_alter_findingtag_onset.py  0026_alter_theory_parent.py  0027_alter_sample_type_alter_stimulus_category_and_more.py  0028_alter_consciousnessmeasure_phase_and_more.py  0029_aggregatedinterpretation.py  0030_auto_20230429_2134.py  0031_aggregatedinterpretation_parent_theory_acronyms_and_more.py  0032_auto_20230517_1025.py  0033_auto_20230517_1023.py  (+38 more)
studies/models/: __init__.py  aggregated_interpretation.py  author.py  consciousness_measure.py  experiment.py  finding_tag.py  interpretation.py  measure.py  paradigm.py  sample.py  stimulus.py  study.py  task.py  technique.py  theory.py
studies/parsers/: finding_tag_parsers.py  historic_data_helpers.py  parsing_findings_Contrast2.py  process_row.py  studies_parsing_helpers.py
studies/processors/: across_the_years.py  base.py  brain_images.py  frequencies.py  journals.py  nations_of_consciousness.py  parameters_distribution_bar.py  parameters_distribution_free_queries.py  parameters_distribution_pie.py  parameters_distribution_theory_comparison_pie.py  theories_support_matrix.py  timings.py  trends_over_time.py  (+1 more)
templates/: password_reset_email.html
uncontrast_studies/: admin.py  apps.py  filters.py  managers.py  open_api_parameters.py  serializers.py  urls.py
users/: admin.py  apps.py  choices.py  models.py  serializers.py  urls.py  views.py
(+142 files in other folders)
