[tool.poetry]
name = "contrast-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">3.10,<3.11"
Django = "^5.0.6"
django-configurations = "^2.5.1"
dj-database-url = "^2.1.0"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django-extensions = "^3.2.3"
django-import-export = "^4.0.5"
django-storages = "^1.14"
Pillow = "^10.3.0"
django-cors-headers = "^4.3.1"
django-querycount = "^0.8.3"
gunicorn = "^22.0.0"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
drf-nested-routers = "^0.94.1"
drf-spectacular = "^0.27.2"
boto3 = ">=1.34.112"
django-nested-inline = "^0.4.6"
django-modeladmin-reorder = {git = "https://github.com/bloodwithmilk25/django-modeladmin-reorder.git", rev = "master"}
django-spa = {git = "https://github.com/VBobCat/django-spa.git", rev = "master"}
django-countries = {git = "https://github.com/SmileyChris/django-countries", rev="58f258402072a18756a15daa81325428382bd946"}
numpy = "^1.26.4"
pandas = "^1.5.3"
whitenoise = "6.2.0" # currently should be hardcoded to 6.2.0
django-admin-rangefilter = "^0.12.4"
django-anymail = "^10.3"
sentry-sdk = "^2.3.1"
django-two-factor-auth = { extras = ["phonenumbers"], version = "^1.16.0" }
django-simple-history = "^3.5.0"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# Never enforce `E501` (line length violations).
lint.ignore = ["E501"]