[tool.poetry]
name = "contrast-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">3.10,<3.11"
Django = "5.1.3"
django-configurations = "^2.5.1"
dj-database-url = "^2.3.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-extensions = "^3.2.3"
django-import-export = "^4.1.1"
django-storages = "^1.14.4"
Pillow = "^11.0.0"
django-cors-headers = "^4.6.0"
django-querycount = "^0.8.3"
gunicorn = "^23.0.0"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.10"
drf-nested-routers = "^0.94.1"
drf-spectacular = "^0.27.2"
boto3 = ">=1.34.112"
django-nested-inline = "^0.4.6"
# following needed as original package is unmaintained
django-modeladmin-reorder = {git = "https://github.com/bloodwithmilk25/django-modeladmin-reorder.git", rev = "master"}
django-spa = {git = "https://github.com/VBobCat/django-spa.git", rev = "master"}
#django-countries = {git = "https://github.com/SmileyChris/django-countries", rev="58f258402072a18756a15daa81325428382bd946"}
django-countries = "7.6.1"
numpy = "^1.26.4"
pandas = "^1.5.3"
whitenoise = "6.2.0" # currently should be hardcoded to 6.2.0
django-admin-rangefilter = "^0.13.2"
django-anymail = "^12.0"
sentry-sdk = "^2.18.0"
django-two-factor-auth = { extras = ["phonenumbers"], version = "^1.17.0" }
django-simple-history = "^3.7.0"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# Never enforce `E501` (line length violations).
lint.ignore = ["E501"]