[tool.poetry]
name = "contrast-api"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">3.10,<3.12"
Django = "5.1.8"
django-configurations = "^2.5.1"
dj-database-url = "^2.3.0"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
django-extensions = "^4.1"
django-import-export = "^4.3.7"
django-storages = "^1.14.6"
Pillow = "^11.2.1"
django-cors-headers = "^4.7.0"
django-querycount = "^0.8.3"
gunicorn = "^23.0.0"
djangorestframework-simplejwt = "^5.4.0"
psycopg2 = "^2.9.10"
drf-nested-routers = "^0.95.0"
drf-spectacular = "^0.28.0"
boto3 = ">=1.37.30"
django-nested-inline = "^0.4.6"
# following needed as original package is unmaintained
django-modeladmin-reorder = {git = "https://github.com/bloodwithmilk25/django-modeladmin-reorder.git", rev = "master"}
django-spa = {git = "https://github.com/VBobCat/django-spa.git", rev = "master"}
django-countries = "7.6.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
whitenoise = "6.2.0" # currently should be hardcoded to 6.2.0
django-admin-rangefilter = "^0.13.2"
django-anymail = "^13.0"
sentry-sdk = "^2.38.0"
django-two-factor-auth = { extras = ["phonenumbers"], version = "^1.17.0" }
django-simple-history = "^3.7.0"
openpyxl = "^3.1.5"
matplotlib = "^3.10.3"
nibabel = "^5.3.2"
nilearn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# Never enforce `E501` (line length violations).
lint.ignore = ["E501"]